--- a/01_Pytorch_workflow.ipynb
+++ b/01_Pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNgxmqV2gASsMVZMCsKqvWW",
+      "authorship_tag": "ABX9TyOfrf6LSODaEyxuNzC/vRJ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2194,9 +2194,141 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Load a Pytorch Model\n",
+        "\n",
+        "# create a new instance of linear regression model V2\n",
+        "loaded_model_1= LinearRegressionModelV2()\n",
+        "\n",
+        "#laod the save model_1 state_dict\n",
+        "loaded_model_1.load_state_dict(torch.load(MODEL_SAVE_PATH))\n",
+        "\n",
+        "#put the loaded model to device\n",
+        "\n",
+        "loaded_model_1.to(device)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MeCUpDrPid3a",
+        "outputId": "7401dd69-334f-4655-9664-ee7f2ecc6bf7"
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegressionModelV2(\n",
+              "  (linear_layer): Linear(in_features=1, out_features=1, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next(loaded_model_1.parameters()).device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wiUm8qcblRjI",
+        "outputId": "7c83e2aa-e0b5-4da0-a8af-cffe6428d545"
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda', index=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loaded_model_1.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9OAhwzUWlbjq",
+        "outputId": "ccd41685-030a-4a92-f93e-77487a810dd9"
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('linear_layer.weight', tensor([[0.6968]], device='cuda:0')),\n",
+              "             ('linear_layer.bias', tensor([0.3025], device='cuda:0'))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 110
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Evaluate loaded model\n",
+        "\n",
+        "loaded_model_1.eval()\n",
+        "with torch.inference_mode():\n",
+        "  loaded_model_1_preds= loaded_model_1(X_test)\n",
+        "\n",
+        "y_preds== loaded_model_1_preds"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xjf8Nbt2lgUS",
+        "outputId": "96db0da4-afad-4506-e846-93c888b9f3b7"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True]], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "MeCUpDrPid3a"
+        "id": "pwog3X07l5C1"
       },
       "execution_count": null,
       "outputs": []
